Rocket Science on SwissPairingEngine